--- a/config/config_sample.yml
+++ b/config/config_sample.yml
@@ -12,3 +12,6 @@ minio:
 log:
   level: debug # debug, info, warn or error (default: info)
   file: /var/log/mt.log # if empty, file logging will be disabled
+notify:
+  url: https://chat.mono.net.tr
+  token: 1234
