--- a/config/config_sample.yml
+++ b/config/config_sample.yml
@@ -4,11 +4,13 @@ minio:
     accessKey:
     secretKey:
     secure: false
+    insecureSkipVerify: false
   server2:
     endpoint: 10.11.50.55:9000
     accessKey:
     secretKey:
     secure: true
+    insecureSkipVerify: true
 log:
   level: debug # debug, info, warn or error (default: info)
   file: /var/log/mt.log # if empty, file logging will be disabled
