--- a/config/config_sample.yml
+++ b/config/config_sample.yml
@@ -14,6 +14,9 @@ minio:
 log:
   level: debug # debug, info, warn or error (default: info)
   file: /var/log/mt.log # if empty, file logging will be disabled
+  maxSize: 50 # maximum file size in mb (default: 50)
+  maxBackup: 3 # maximum backup count (default: 3)
+  maxAges: 30 # maximum log file age in days (default: 30)
 notify:
   url: https://chat.mono.net.tr
   token: 1234
